# NgiML_001_CPT_to_soilType

./: .gitignore  Homework-earthquake explanantion.docx  LICENSE  Train split sets.docx  pyproject.toml  ~$mework-earthquake explanantion.docx
notebooks/: .gitattributes  eda.ipynb  eda_earthquake.ipynb  hw_ex1_earthquake.ipynb
