[tool.poetry]
name = "ngiml-001-cpt-to-soiltype"
version = "0.1.0"
description = "cpt to soil type"
authors = ["raginigogoi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.3.0"
numpy = "2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
